Fixed error in limits of integration in Beckmann potential formula.

--- a/slides 3 - congestion games.ipynb
+++ b/slides 3 - congestion games.ipynb
@@ -1191,7 +1191,7 @@
     "\n",
     "A flow pattern corresponding to a Wardrop equilibrium is obtained by minimising the Beckmann potential:\n",
     "\n",
-    "$$ F_{WE}(X) = \\sum_{i=1}^{n_v} \\int\\, \\tau_i(x_i)\\ dx_i.$$\n",
+    "$$ F_{WE}(X) = \\sum_{i=1}^{n_v} \\int_0^{x_i}\\, \\tau_i(\\chi)\\ d\\chi.$$\n",
     "\n",
     "This is not obvious. The difference between the social optimum and the Wardrop equilibrium is called the \"price of anarchy\". "
    ]
